# talkie

./: .dockerignore  .env.prod.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260405_000001_initial_backend_foundation.py  20260405_000002_backend_performance_indexes.py
backend/docs/: api-reference.md  architecture-decisions.md  replay-access.md  worker-architecture.md
backend/src/: main.py
backend/src/api/: auth.py  meetings.py  websocket.py  worker.py
backend/src/core/: auth.py  config.py  database.py  dependencies.py  exceptions.py  middleware.py  redis.py  storage.py  websocket_manager.py
backend/src/models/: __init__.py  audio_chunk.py  base.py  host.py  meeting.py  meeting_summary.py  segment_translation.py  transcript_segment.py
backend/src/schemas/: base.py  meeting.py
backend/src/services/: audio_chunk_service.py  meeting_service.py  summary_service.py  transcript_service.py  translation_service.py  worker_service.py
backend/src/workers/: chunk_monitor.py
backend/tests/: conftest.py
backend/tests/contract/: conftest.py  test_postgres_contract.py
backend/tests/integration/: conftest.py  test_abnormal_meeting_end.py  test_auth_api.py  test_meeting_websocket.py  test_meetings_api.py  test_no_worker_queueing.py  test_participant_join.py  test_participant_replay.py  test_reconnect_buffering.py  test_replay_access.py  test_replay_translation_generation.py  test_worker_api.py
backend/tests/performance/: test_long_running_meeting.py  test_participant_fanout.py  test_summary_latency.py  test_translation_latency.py
backend/tests/unit/: test_audio_chunk_service.py  test_auth.py  test_dependencies.py  test_exceptions.py  test_meeting_service.py  test_summary_service.py  test_translation_service.py
backend/tests/unit/services/: test_worker_service.py
colab-worker/: README.md  notebook.ipynb  pyproject.toml  requirements-cpu.txt  requirements.txt
colab-worker/tests/: test_config.py  test_processor.py  test_worker_client.py
colab-worker/worker/: client.py  config.py  main.py  processor.py
colab-worker/worker/models/: whisper_loader.py
docs/: deployment.md
frontend/: .eslintignore  .eslintrc.cjs  .prettierignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.ts
scripts/: setup-dev.sh
(+66 files in other folders)
